--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -37,6 +37,10 @@
   background-color: transparent;
 }
 
+.typed-cursor{
+  color: white;
+}
+
 @media (min-width: 992px) {
   #mainNav {
     padding-top: 0;
@@ -109,6 +113,7 @@
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
 }
+
 
 .masthead h2 {
   max-width: 20rem;
