--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -96,16 +96,18 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: -webkit-gradient(linear, left top, left bottom, from(rgba(22, 22, 22, 0.1)), color-stop(75%, rgba(22, 22, 22, 0.5)), to(#161616)), url("../img/bg-masthead.jpg");
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  background-color: black;
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%));
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
   background-size: cover;
 }
 
+
+
 .masthead h1 {
-  font-family: 'Varela Round';
+  font-family: 'rufina';
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
@@ -116,8 +118,11 @@
 
 
 .masthead h2 {
+  font-family: 'open sans';
+  letter-spacing: 0.4rem;
+  color: white;
   max-width: 20rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 @media (min-width: 768px) {
